Ajout du fichier style.css et inclusion dans index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Page de Base</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bienvenue sur la page principale</h1>
